# chatbot-conversations

./: .gitignore  LICENSE  README.md  chatbots.py  citation.cff  generation.py  main.py  outputs.txt  requirements.txt  setup.cfg  setup.py  utils.py
.github/.workflows/: publish_to_pypi.yml
chatting_chatbots/: __init__.py  chatbots.py  generation.py  utils.py
src/chatting_chatbots/: __init__.py  about.py  chatbots.py
tutorials/: examples.ipynb
